tests/unit/language/errors/handle_type_mismatch_error.arche
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -q "type mismatch\|error" %t.out
Player :: arche {
  pos :: float,
}

Enemy :: arche {
  health :: float,
}

static pool<Player> (10)

static pool<Enemy> (10)

main :: proc() {
  p := insert(Player, 1.0);
  delete(table<Enemy>, p);
}
